# data-science-workbook

./: .gitignore  01-import-organize-transform.ipynb  02-data-manipulation.ipynb  03-data-visualization.ipynb  04-data-storytelling.ipynb  05-data-storytelling-2.ipynb  06-linear-regression.ipynb  07-KNN.ipynb  08-KNN-data-project.ipynb  09-LR-data-project.ipynb  10-documentation.ipynb  99-10-minutes-pandas.ipynb  pyproject.toml
data/: arquivo_dados.csv  arquivo_dados.json  arquivo_largura_fixa.txt  demo.ipynb  meu_banco.db  planilha_dados.csv  planilha_dados.xlsx  tabela_dados.html
