[project]
name = "datascience"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "lxml==5.4.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.1",
    "numpy>=2.2.5",
    "openpyxl==3.1.5",
    "pandas>=2.2.3",
    "pandoc==2.4",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
