[project]
name = "datascience"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.7.3",
    "bokeh-sampledata==2024.2",
    "google>=3.0.0",
    "lxml==5.4.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.1",
    "numpy>=2.2.5",
    "openpyxl==3.1.5",
    "pandas>=2.2.3",
    "pandoc==2.4",
    "pip==25.1.1",
    "plotly>=6.1.0",
    "plotnine>=0.14.5",
    "requests>=2.32.3",
    "scikit-learn==1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
